# shutdown-app-using-rust

./: Cargo.toml  README.md
src/: main.rs  tempCodeRunnerFile.rs
ui/: app-window.slint
