[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"
description = "Just enough using Rust- dont you feel sometime you have just enough of something? well here is my app to save you "


[dependencies]
slint = "1.8.0"  # For UI
chrono = "0.4"    
anyhow = "1.0"    

[build-dependencies]
slint-build = "1.8.0"

[package.metadata.bundle]
name="just enough using rust"
identifier="io.github.shreyas-sridhar.shutdown-app-using-rust"
icon = ["path/to/icon.ico"]

[profile.release]
lto = true
